@@ -1,5 +1,6 @@
 # 2024/02/25
 - Added /aqo save command
+- Fix mage pettype command
 
 # 2024/02/25
 - implement cures maybe
